--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,12 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
+
+lib_deps =
+    WiFi
+    WebServer
+    Adafruit MPU6050
+    Adafruit Unified Sensor
+    Arduino_OPC_UA
+    Preferences
